Add set_user_data
